--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -13,6 +13,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.app-wrapper {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-content.with-navbar {
+  min-height: auto;
+}
+
+.content-container {
+  width: 100%;
+  max-width: 1280px;
+  padding: 2rem;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
