--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -25,7 +25,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .main-content.with-navbar {
