update frontend password prompts and allow users to re-register with same credentials

--- a/sim/templates/registration/account_activation_email.html
+++ b/sim/templates/registration/account_activation_email.html
@@ -4,7 +4,7 @@
     <title>Account Activation</title>
 </head>
 <body>
-    <h2>Password Reset Request</h2>
+    <h2>Account Activation</h2>
     
     {% if member %}
         <p>Hi {{ member.first_name }},</p>
