--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,87 @@
+/* Myriad Pro - Regular Width */
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('/fonts/myriadpro/MyriadPro-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('/fonts/myriadpro/MYRIADPRO-REGULAR.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('/fonts/myriadpro/MYRIADPRO-SEMIBOLD.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('/fonts/myriadpro/MYRIADPRO-SEMIBOLDIT.woff') format('woff');
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('/fonts/myriadpro/MYRIADPRO-BOLD.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro';
+  src: url('/fonts/myriadpro/MYRIADPRO-BOLDIT.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+/* Myriad Pro - Condensed Width */
+@font-face {
+  font-family: 'Myriad Pro Condensed';
+  src: url('/fonts/myriadpro/MYRIADPRO-COND.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro Condensed';
+  src: url('/fonts/myriadpro/MYRIADPRO-CONDIT.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro Condensed';
+  src: url('/fonts/myriadpro/MYRIADPRO-BOLDCOND.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Myriad Pro Condensed';
+  src: url('/fonts/myriadpro/MYRIADPRO-BOLDCONDIT.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: 'Myriad Pro', system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,6 +98,19 @@
   --brand-blue-dark: #1e3470;
   --brand-gold: #cc9c4a;
   --brand-gold-dark: #c29241;
+
+  /* Override Bootstrap's default font */
+  --bs-font-sans-serif: 'Myriad Pro', system-ui, Avenir, Helvetica, Arial, sans-serif;
+
+  /* Override Bootstrap's heading color */
+  --bs-heading-color: #4b4c4e !important; 
+  
+  /* Override Bootstrap's body color */
+  --bs-body-color: #333333 !important; 
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600 !important; 
 }
 
 .btn-blue {
@@ -78,6 +173,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'Myriad Pro', system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 h1 {
